styles/globals.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  background-color: #f3ba2f;
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

.flex-r {
  display: flex;
  flex-direction: row;
}

.flex-c {
  display: flex;
  flex-direction: column;
}

.flex-r-c {
  display: flex;
  flex-direction: row;
  justify-content:center;
}


.img-box{
  height: 200px;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.img-box img{
  height: inherit;
  object-fit: contain;
}


/* (A) TABS CONTAINER */
.tab {
  position: relative;
  min-width: 400px;
  max-width: 900px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-content: center;
  margin: 0 auto;
}

/* (B) HIDE CHECKBOX */
.tab input { display: none; }

/* (C) TAB LABEL */
.tab label {
  display: block;
  /* flex-direction: row; */
  margin-top: 10px;
  padding: 1rem;
  color: #fff;
  font-weight: bold;
  border-radius: 50px;
  background: #1A2025;
  cursor: pointer;
  
}

/* (D) TAB CONTENT */
.tab .tab-content {
  background: grey;
  /* CSS ANIMATION WILL NOT WORK WITH AUTO HEIGHT */
  /* THIS IS WHY WE USE MAX-HEIGHT INSTEAD */
  overflow: hidden;
  transition: max-height 0.3s;
  max-height: 0;
}
.tab .tab-content p { padding: 10px; }

/* (E) OPEN TAB ON CHECKED */
.tab input:checked ~ .tab-content { max-height: 100vh; }

/* (F) EXTRA - ADD ARROW INDICATOR */
.tab label::after {
  content: "\25b6";
  position: absolute;
  right: 10px;
  top: 20px;
  display: block;
  transition: all 0.4s;
}
.tab input:checked ~ label::after { transform: rotate(90deg); }

.address{
  background: #1A2025;
  border: 1px solid #f0b5c3;
  border-radius: 30px;
  padding: 10px 10px 10px 25px;
  max-width: 630px;
  min-width: 600px;
  width: 100%;
  color: #f3ba2f;
  box-shadow: 0 9px 50px -10px #000;

}

.cake-img{
  width:100%;
  height: 100px;
}

.cake-img img{
  height: inherit;
}

